chore: update formatting ruleset